style.css
/*Colors
  - Primary light - #F2F1E8
  - Primary dark - #050533
  - Highlight blue - #0D698B
  - Highlight red - #E34234
  */

* {
    -moz-box-sizing: border-box;
}

body {
    margin: 0px 0px;
    font-family: League Spartan, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 18px;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
} 

/*Typography*/

h1, h2, h3 {
    color: gray;
}
h1 {
    font-size: 70px;
}

h2 {
    font-size: 40px;
}

h3 {
    font-size: 25px;
}

i {
    font-size: 35px;
}
header {
    display: flex;
    justify-content: center;
    align-items: center;
    background: #F2F1E8;
}

.logo {
    width: auto;
    height: 150px;
    margin: 15px;
}

.gameZone {
    display: flex;
    justify-content: space-around;
    margin-top: 35px;
    flex: 1;
}

.cards {
    display: flex;
    flex: row;
    gap: 15px;
}

.card {
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    width: 151px;
    height: 151px;
    font-weight: 700;
    font-size: 60px;
    flex: none;
}   
.user .card {
    background-color: #0D698B;
}

.computer .card {
    background-color: #E34234;
}

.user, .computer, .centerGame {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.user, .computer {
    margin-top: 84px;
}

.user{
    order: -2;
}

.centerGame {
    order: -1;
}

.choiceContainer {
    width: 150px;
    height: 150px;
    background-color: #F2F1E8;
    border: 1px solid #050533;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

footer {
    background-color: #050533;
    flex-shrink: 0;
    min-height: 75px;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 14px;
}       

button {
    background-color: #F2F1E8;
    color: #050533;
    font-size: bold;
    font-size: 20px;
    padding: 8px 20px;
    border: #050533 solid 1px;
    border-radius: 5px;
    margin-top: 25px;
}

button:hover {
    font-weight: 700;
    transition-duration: 500ms;
}

.choiceContainer:hover {
    transform: scale(1.025);
    transition-duration: 500ms;
    background-color: #e3e2d9;
}

/* Media Queries */

@media screen and (max-width: 830px) {
    .gameZone {
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        margin-top: 15px;
        flex: 1;
    }
    .cards {
        flex-direction: column;

    }

    .card {
        display: flex;
        justify-content: center;
        align-items: center;
        color: white;
        font-weight: 700;
        font-size: 30px;
        flex: .2;
        order: 1;
        min-width: 75px;
    }  
    
    .choiceContainer, .card {
        width: 80vw;
        height: 25px;
        padding: 13px;
        justify-content: center;
        align-items: center;
    }

    .choiceContainer{
        flex-direction: row;
        gap: 25px;
    }

    .user {
        order: -2;
        margin: 0;
    }

    .computer{
        order: -1;
    }

    .user, .computer {
        margin: 15px;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        gap: 15px;
        width: 60vw;
    }

    button {
        margin-bottom: 25px;
    }

    header {
        max-height: 150px;
    }

    h2 {
        font-size: 25px;
    }
    h3 {
        font-size: 21px;
    }

    
    }

